# benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
booleanarray/: BitBooleanArray.hpp  README.md  SentinelBooleanArray.hpp  ShiftedBooleanArray.hpp
cmake/: UpdateSubmodules.cmake
innerproduct/: CMakeLists.txt  README.md  bmip.cpp  ip.cpp  ip.h  ipfun.h
l2norm/: CMakeLists.txt  bml2norm.cpp  l2norm.cpp  l2norm.hpp
pow2rd/: .gitignore  CMakeLists.txt  Makefile  README.md  bmpow2rd.cpp  main.c  old-Makefile  pow2rd.h
search/: CMakeLists.txt  README.md  bmsearch.cpp  search.hpp
